hero image placement swap

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </div>
   </nav>
   <div class="main-wrapper">
+    <div class="hero">
+      <img src="images/illustration-main.svg">
+    </div>
     <div class="content">
       <main>
         <h1>All your files in one secure location, accessible anywhere.</h1>
