--- a/index.html
+++ b/index.html
@@ -35,14 +35,11 @@
           <label for="email">
             <h3>Sign up for early access</h3>
           </label>
-          <input type="email" id="email">
-          <button class="btn-primary">Sign Up</button>
+          <input type="email" id="email" required>
+          <button>Sign Up</button>
         </form>
       </main>
 
-    </div>
-    <div class="hero">
-      <img src="images/illustration-main.svg">
     </div>
   </div>
 </body>
